--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,7 @@
 // app global css in SCSS form
+
+// Fix Firefox warning sobre h1 em sections
+section h1 {
+  font-size: inherit;
+  margin: inherit;
+}
